--- a/index.html
+++ b/index.html
@@ -11,21 +11,18 @@
         <h1>Quiz App</h1>
         <div id="question-container">
             <h2 id="questions"></h2>
-            <div id="id=answer-buttons" class="btn-grid">
+            <div id="answer-buttons" class="btn-grid">
                 <button class="btn">Answer 1</button>
                 <button class="btn">Answer 2</button>
                 <button class="btn">Answer 3</button>
                 <button class="btn">Answer 4</button>
-
             </div>
-
         </div>
         <button id="next-btn" class="next-btn btn">Next</button>
         <div id="score-container">
             <h2>Your Score: <span id="score"></span></h2>
         </div>
-
     </div>
-    <script src="/script.js"></script>
+    <script type="module" src="script.js"></script> 
 </body>
 </html>
